c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/sub_different_pointer_types.c
int main(void)
{
    long x[10];
    long *ptr = x;
    unsigned long *ptr2 = (unsigned long *)ptr;
    // You can't subtract pointers to different types
    return ptr - ptr2;
}